parser.output
   0  $accept : %entry% $end

   1  file : list_decl EOF
   2       | EOF

   3  list_decl : decl
   4            | decl list_decl

   5  decl : MODULE ident varTypeList assignList SPEC spec END
   6       | MODULE ident LP idents RP varTypeList assignList END

   7  varTypeList :
   8              | varType varTypeList

   9  varType : ident COLON BOOLEAN SEMI
  10          | ident COLON LCB idents RCB SEMI
  11          | ident COLON PROCESS ident LP idents RP SEMI

  12  assignList :
  13             | INIT LP ident RP EQDEF expr assignList
  14             | NEXT LP ident RP EQDEF expr assignList

  15  expr : NOT expr
  16       | TRUE
  17       | FALSE
  18       | expr infix expr
  19       | ident

  20  infix : AND
  21        | OR
  22        | IMP
  23        | EQUV

  24  spec : AX spec
  25       | EX spec
  26       | AF spec
  27       | EF spec
  28       | AG spec
  29       | EG spec
  30       | A LB spec U spec RB
  31       | E LB spec U spec RB
  32       | A LB spec R spec RB
  33       | E LB spec R spec RB
  34       | ident

  35  idents :
  36         | ident COMMA idents

  37  ident : IDENT

  38  %entry% : '\001' file

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . file  (38)

	EOF  shift 3
	MODULE  shift 4
	.  error

	file  goto 5
	list_decl  goto 6
	decl  goto 7


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	file : EOF .  (2)

	.  reduce 2


state 4
	decl : MODULE . ident varTypeList assignList SPEC spec END  (5)
	decl : MODULE . ident LP idents RP varTypeList assignList END  (6)

	IDENT  shift 8
	.  error

	ident  goto 9


state 5
	%entry% : '\001' file .  (38)

	.  reduce 38


state 6
	file : list_decl . EOF  (1)

	EOF  shift 10
	.  error


state 7
	list_decl : decl .  (3)
	list_decl : decl . list_decl  (4)

	MODULE  shift 4
	EOF  reduce 3

	list_decl  goto 11
	decl  goto 7


state 8
	ident : IDENT .  (37)

	.  reduce 37


state 9
	decl : MODULE ident . varTypeList assignList SPEC spec END  (5)
	decl : MODULE ident . LP idents RP varTypeList assignList END  (6)
	varTypeList : .  (7)

	IDENT  shift 8
	LP  shift 12
	INIT  reduce 7
	NEXT  reduce 7
	SPEC  reduce 7

	ident  goto 13
	varTypeList  goto 14
	varType  goto 15


state 10
	file : list_decl EOF .  (1)

	.  reduce 1


state 11
	list_decl : decl list_decl .  (4)

	.  reduce 4


state 12
	decl : MODULE ident LP . idents RP varTypeList assignList END  (6)
	idents : .  (35)

	IDENT  shift 8
	RP  reduce 35

	ident  goto 16
	idents  goto 17


state 13
	varType : ident . COLON BOOLEAN SEMI  (9)
	varType : ident . COLON LCB idents RCB SEMI  (10)
	varType : ident . COLON PROCESS ident LP idents RP SEMI  (11)

	COLON  shift 18
	.  error


state 14
	decl : MODULE ident varTypeList . assignList SPEC spec END  (5)
	assignList : .  (12)

	INIT  shift 19
	NEXT  shift 20
	SPEC  reduce 12

	assignList  goto 21


state 15
	varTypeList : varType . varTypeList  (8)
	varTypeList : .  (7)

	IDENT  shift 8
	INIT  reduce 7
	NEXT  reduce 7
	SPEC  reduce 7
	END  reduce 7

	ident  goto 13
	varTypeList  goto 22
	varType  goto 15


state 16
	idents : ident . COMMA idents  (36)

	COMMA  shift 23
	.  error


state 17
	decl : MODULE ident LP idents . RP varTypeList assignList END  (6)

	RP  shift 24
	.  error


state 18
	varType : ident COLON . BOOLEAN SEMI  (9)
	varType : ident COLON . LCB idents RCB SEMI  (10)
	varType : ident COLON . PROCESS ident LP idents RP SEMI  (11)

	LCB  shift 25
	PROCESS  shift 26
	BOOLEAN  shift 27
	.  error


state 19
	assignList : INIT . LP ident RP EQDEF expr assignList  (13)

	LP  shift 28
	.  error


state 20
	assignList : NEXT . LP ident RP EQDEF expr assignList  (14)

	LP  shift 29
	.  error


state 21
	decl : MODULE ident varTypeList assignList . SPEC spec END  (5)

	SPEC  shift 30
	.  error


state 22
	varTypeList : varType varTypeList .  (8)

	.  reduce 8


state 23
	idents : ident COMMA . idents  (36)
	idents : .  (35)

	IDENT  shift 8
	RP  reduce 35
	RCB  reduce 35

	ident  goto 16
	idents  goto 31


state 24
	decl : MODULE ident LP idents RP . varTypeList assignList END  (6)
	varTypeList : .  (7)

	IDENT  shift 8
	INIT  reduce 7
	NEXT  reduce 7
	END  reduce 7

	ident  goto 13
	varTypeList  goto 32
	varType  goto 15


state 25
	varType : ident COLON LCB . idents RCB SEMI  (10)
	idents : .  (35)

	IDENT  shift 8
	RCB  reduce 35

	ident  goto 16
	idents  goto 33


state 26
	varType : ident COLON PROCESS . ident LP idents RP SEMI  (11)

	IDENT  shift 8
	.  error

	ident  goto 34


state 27
	varType : ident COLON BOOLEAN . SEMI  (9)

	SEMI  shift 35
	.  error


state 28
	assignList : INIT LP . ident RP EQDEF expr assignList  (13)

	IDENT  shift 8
	.  error

	ident  goto 36


state 29
	assignList : NEXT LP . ident RP EQDEF expr assignList  (14)

	IDENT  shift 8
	.  error

	ident  goto 37


state 30
	decl : MODULE ident varTypeList assignList SPEC . spec END  (5)

	IDENT  shift 8
	AX  shift 38
	EX  shift 39
	AG  shift 40
	EG  shift 41
	AF  shift 42
	EF  shift 43
	A  shift 44
	E  shift 45
	.  error

	ident  goto 46
	spec  goto 47


state 31
	idents : ident COMMA idents .  (36)

	.  reduce 36


state 32
	decl : MODULE ident LP idents RP varTypeList . assignList END  (6)
	assignList : .  (12)

	INIT  shift 19
	NEXT  shift 20
	END  reduce 12

	assignList  goto 48


state 33
	varType : ident COLON LCB idents . RCB SEMI  (10)

	RCB  shift 49
	.  error


state 34
	varType : ident COLON PROCESS ident . LP idents RP SEMI  (11)

	LP  shift 50
	.  error


state 35
	varType : ident COLON BOOLEAN SEMI .  (9)

	.  reduce 9


state 36
	assignList : INIT LP ident . RP EQDEF expr assignList  (13)

	RP  shift 51
	.  error


state 37
	assignList : NEXT LP ident . RP EQDEF expr assignList  (14)

	RP  shift 52
	.  error


state 38
	spec : AX . spec  (24)

	IDENT  shift 8
	AX  shift 38
	EX  shift 39
	AG  shift 40
	EG  shift 41
	AF  shift 42
	EF  shift 43
	A  shift 44
	E  shift 45
	.  error

	ident  goto 46
	spec  goto 53


state 39
	spec : EX . spec  (25)

	IDENT  shift 8
	AX  shift 38
	EX  shift 39
	AG  shift 40
	EG  shift 41
	AF  shift 42
	EF  shift 43
	A  shift 44
	E  shift 45
	.  error

	ident  goto 46
	spec  goto 54


state 40
	spec : AG . spec  (28)

	IDENT  shift 8
	AX  shift 38
	EX  shift 39
	AG  shift 40
	EG  shift 41
	AF  shift 42
	EF  shift 43
	A  shift 44
	E  shift 45
	.  error

	ident  goto 46
	spec  goto 55


state 41
	spec : EG . spec  (29)

	IDENT  shift 8
	AX  shift 38
	EX  shift 39
	AG  shift 40
	EG  shift 41
	AF  shift 42
	EF  shift 43
	A  shift 44
	E  shift 45
	.  error

	ident  goto 46
	spec  goto 56


state 42
	spec : AF . spec  (26)

	IDENT  shift 8
	AX  shift 38
	EX  shift 39
	AG  shift 40
	EG  shift 41
	AF  shift 42
	EF  shift 43
	A  shift 44
	E  shift 45
	.  error

	ident  goto 46
	spec  goto 57


state 43
	spec : EF . spec  (27)

	IDENT  shift 8
	AX  shift 38
	EX  shift 39
	AG  shift 40
	EG  shift 41
	AF  shift 42
	EF  shift 43
	A  shift 44
	E  shift 45
	.  error

	ident  goto 46
	spec  goto 58


state 44
	spec : A . LB spec U spec RB  (30)
	spec : A . LB spec R spec RB  (32)

	LB  shift 59
	.  error


state 45
	spec : E . LB spec U spec RB  (31)
	spec : E . LB spec R spec RB  (33)

	LB  shift 60
	.  error


state 46
	spec : ident .  (34)

	.  reduce 34


state 47
	decl : MODULE ident varTypeList assignList SPEC spec . END  (5)

	END  shift 61
	.  error


state 48
	decl : MODULE ident LP idents RP varTypeList assignList . END  (6)

	END  shift 62
	.  error


state 49
	varType : ident COLON LCB idents RCB . SEMI  (10)

	SEMI  shift 63
	.  error


state 50
	varType : ident COLON PROCESS ident LP . idents RP SEMI  (11)
	idents : .  (35)

	IDENT  shift 8
	RP  reduce 35

	ident  goto 16
	idents  goto 64


state 51
	assignList : INIT LP ident RP . EQDEF expr assignList  (13)

	EQDEF  shift 65
	.  error


state 52
	assignList : NEXT LP ident RP . EQDEF expr assignList  (14)

	EQDEF  shift 66
	.  error


state 53
	spec : AX spec .  (24)

	.  reduce 24


state 54
	spec : EX spec .  (25)

	.  reduce 25


state 55
	spec : AG spec .  (28)

	.  reduce 28


state 56
	spec : EG spec .  (29)

	.  reduce 29


state 57
	spec : AF spec .  (26)

	.  reduce 26


state 58
	spec : EF spec .  (27)

	.  reduce 27


state 59
	spec : A LB . spec U spec RB  (30)
	spec : A LB . spec R spec RB  (32)

	IDENT  shift 8
	AX  shift 38
	EX  shift 39
	AG  shift 40
	EG  shift 41
	AF  shift 42
	EF  shift 43
	A  shift 44
	E  shift 45
	.  error

	ident  goto 46
	spec  goto 67


state 60
	spec : E LB . spec U spec RB  (31)
	spec : E LB . spec R spec RB  (33)

	IDENT  shift 8
	AX  shift 38
	EX  shift 39
	AG  shift 40
	EG  shift 41
	AF  shift 42
	EF  shift 43
	A  shift 44
	E  shift 45
	.  error

	ident  goto 46
	spec  goto 68


state 61
	decl : MODULE ident varTypeList assignList SPEC spec END .  (5)

	.  reduce 5


state 62
	decl : MODULE ident LP idents RP varTypeList assignList END .  (6)

	.  reduce 6


state 63
	varType : ident COLON LCB idents RCB SEMI .  (10)

	.  reduce 10


state 64
	varType : ident COLON PROCESS ident LP idents . RP SEMI  (11)

	RP  shift 69
	.  error


state 65
	assignList : INIT LP ident RP EQDEF . expr assignList  (13)

	IDENT  shift 8
	TRUE  shift 70
	FALSE  shift 71
	NOT  shift 72
	.  error

	ident  goto 73
	expr  goto 74


state 66
	assignList : NEXT LP ident RP EQDEF . expr assignList  (14)

	IDENT  shift 8
	TRUE  shift 70
	FALSE  shift 71
	NOT  shift 72
	.  error

	ident  goto 73
	expr  goto 75


state 67
	spec : A LB spec . U spec RB  (30)
	spec : A LB spec . R spec RB  (32)

	U  shift 76
	R  shift 77
	.  error


state 68
	spec : E LB spec . U spec RB  (31)
	spec : E LB spec . R spec RB  (33)

	U  shift 78
	R  shift 79
	.  error


state 69
	varType : ident COLON PROCESS ident LP idents RP . SEMI  (11)

	SEMI  shift 80
	.  error


state 70
	expr : TRUE .  (16)

	.  reduce 16


state 71
	expr : FALSE .  (17)

	.  reduce 17


state 72
	expr : NOT . expr  (15)

	IDENT  shift 8
	TRUE  shift 70
	FALSE  shift 71
	NOT  shift 72
	.  error

	ident  goto 73
	expr  goto 81


state 73
	expr : ident .  (19)

	.  reduce 19


state 74
	assignList : INIT LP ident RP EQDEF expr . assignList  (13)
	expr : expr . infix expr  (18)
	assignList : .  (12)

	INIT  shift 19
	NEXT  shift 20
	OR  shift 82
	AND  shift 83
	IMP  shift 84
	EQUV  shift 85
	SPEC  reduce 12
	END  reduce 12

	assignList  goto 86
	infix  goto 87


state 75
	assignList : NEXT LP ident RP EQDEF expr . assignList  (14)
	expr : expr . infix expr  (18)
	assignList : .  (12)

	INIT  shift 19
	NEXT  shift 20
	OR  shift 82
	AND  shift 83
	IMP  shift 84
	EQUV  shift 85
	SPEC  reduce 12
	END  reduce 12

	assignList  goto 88
	infix  goto 87


state 76
	spec : A LB spec U . spec RB  (30)

	IDENT  shift 8
	AX  shift 38
	EX  shift 39
	AG  shift 40
	EG  shift 41
	AF  shift 42
	EF  shift 43
	A  shift 44
	E  shift 45
	.  error

	ident  goto 46
	spec  goto 89


state 77
	spec : A LB spec R . spec RB  (32)

	IDENT  shift 8
	AX  shift 38
	EX  shift 39
	AG  shift 40
	EG  shift 41
	AF  shift 42
	EF  shift 43
	A  shift 44
	E  shift 45
	.  error

	ident  goto 46
	spec  goto 90


state 78
	spec : E LB spec U . spec RB  (31)

	IDENT  shift 8
	AX  shift 38
	EX  shift 39
	AG  shift 40
	EG  shift 41
	AF  shift 42
	EF  shift 43
	A  shift 44
	E  shift 45
	.  error

	ident  goto 46
	spec  goto 91


state 79
	spec : E LB spec R . spec RB  (33)

	IDENT  shift 8
	AX  shift 38
	EX  shift 39
	AG  shift 40
	EG  shift 41
	AF  shift 42
	EF  shift 43
	A  shift 44
	E  shift 45
	.  error

	ident  goto 46
	spec  goto 92


state 80
	varType : ident COLON PROCESS ident LP idents RP SEMI .  (11)

	.  reduce 11


state 81
	expr : NOT expr .  (15)
	expr : expr . infix expr  (18)

	.  reduce 15

	infix  goto 87


state 82
	infix : OR .  (21)

	.  reduce 21


state 83
	infix : AND .  (20)

	.  reduce 20


state 84
	infix : IMP .  (22)

	.  reduce 22


state 85
	infix : EQUV .  (23)

	.  reduce 23


state 86
	assignList : INIT LP ident RP EQDEF expr assignList .  (13)

	.  reduce 13


state 87
	expr : expr infix . expr  (18)

	IDENT  shift 8
	TRUE  shift 70
	FALSE  shift 71
	NOT  shift 72
	.  error

	ident  goto 73
	expr  goto 93


state 88
	assignList : NEXT LP ident RP EQDEF expr assignList .  (14)

	.  reduce 14


state 89
	spec : A LB spec U spec . RB  (30)

	RB  shift 94
	.  error


state 90
	spec : A LB spec R spec . RB  (32)

	RB  shift 95
	.  error


state 91
	spec : E LB spec U spec . RB  (31)

	RB  shift 96
	.  error


state 92
	spec : E LB spec R spec . RB  (33)

	RB  shift 97
	.  error


93: shift/reduce conflict (shift 82, reduce 18) on OR
93: shift/reduce conflict (shift 83, reduce 18) on AND
93: shift/reduce conflict (shift 84, reduce 18) on IMP
93: shift/reduce conflict (shift 85, reduce 18) on EQUV
state 93
	expr : expr . infix expr  (18)
	expr : expr infix expr .  (18)

	OR  shift 82
	AND  shift 83
	IMP  shift 84
	EQUV  shift 85
	INIT  reduce 18
	NEXT  reduce 18
	SPEC  reduce 18
	END  reduce 18

	infix  goto 87


state 94
	spec : A LB spec U spec RB .  (30)

	.  reduce 30


state 95
	spec : A LB spec R spec RB .  (32)

	.  reduce 32


state 96
	spec : E LB spec U spec RB .  (31)

	.  reduce 31


state 97
	spec : E LB spec R spec RB .  (33)

	.  reduce 33


State 93 contains 4 shift/reduce conflicts.


41 terminals, 13 nonterminals
39 grammar rules, 98 states
